fix super mega double borders (#2025)

--- a/app/assets/stylesheets/pages/admin/_super_mega_dashboard.scss
+++ b/app/assets/stylesheets/pages/admin/_super_mega_dashboard.scss
@@ -453,6 +453,9 @@
     animation: smd-shimmer 1.4s ease-in-out infinite;
     min-height: 180px;
     position: relative;
+    border-radius: 12px;
+    padding: 1rem;
+    border: 1px solid var(--color-brown-700);
 
     &.super-mega-dashboard__card--sw-graph {
       min-height: 260px;
